make sure code compiles